# Engineer-Field-Kit

./: .gitignore  ABOUT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EngineersFieldKit.spec  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  app.spec  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  QUICKSTART_ONE_PAGE.md  README.md  RELEASING.md  USAGE.md
packaging/: Engineers_Field_Kit_Multitool.spec
release_assets/final-release-2026-02-26-r2/: RELEASE_NOTES.md
src/engineers_field_kit_multitool/: app.py  config.json  engineers_field_kit_multitool_config.json  styles.py
src/sbs_dsw/: app.py
tools/: pyi_rth_tk.py
tools/pyi_hooks/pre_find_module_path/: hook-tkinter.py
tools/update_server/public/: manifest.json
