[project]
name = "sbs-dsw"
version = "1.0.0-alpha.0"
description = "Seabird-Scientific Digital Sensor Workbench"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}

authors = [
    {name = "Lukas Christensen", email = "lchristensen@seabird.com"},
]

maintainers = [
    {name = "Lukas Christensen", email = "lchristensen@seabird.com"},
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
]

dependencies = [
    "mistune>=3.0.0",
    "numpy>=1.23.0",
    "pyserial>=3.5",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
